--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,9 +21,9 @@
 			align-items: center;
 		}
 			.logo{
-				background: #ea5455;
-				flex: 1 1 auto;
-				height: 50px;
+				/* background: #ea5455; */
+				/* flex: 1 1 auto; */
+				/* height: 50px; */
 			}		
 			.nav{
 				background: #ea5455;
